force-app/main/default/objects/Company__c/fields/AgeGT50__c.field-meta.xml
<CustomField>
    <fullName>AgeGT50__c</fullName>
    <label>AgeGT50</label>
    <summaryFilterItems>
        <field>Worker__c.Age__c</field>
        <operation>greaterThan</operation>
        <value>50</value>
    </summaryFilterItems>
    <summaryForeignKey>Worker__c.Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>