force-app/main/default/objects/Company__c/fields/Average_of_Worker_s_Salaries__c.field-meta.xml
<CustomField>
    <fullName>Average_of_Worker_s_Salaries__c</fullName>
    <formula>SumOfSalary__c  /  Total_Number_of_Workers_in_the_company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average of Worker&apos;s Salaries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>