force-app/main/default/objects/Company__c/fields/MaxLt150k__c.field-meta.xml
<CustomField>
    <fullName>MaxLt150k__c</fullName>
    <label>MaxLt150k</label>
    <summarizedField>Worker__c.Salary__c</summarizedField>
    <summaryFilterItems>
        <field>Worker__c.Salary__c</field>
        <operation>lessThan</operation>
        <value>1000000</value>
    </summaryFilterItems>
    <summaryForeignKey>Worker__c.Company__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>