force-app/main/default/objects/Company__c/fields/SumOfSalary__c.field-meta.xml
<CustomField>
    <fullName>SumOfSalary__c</fullName>
    <label>SumOfSalary</label>
    <summarizedField>Worker__c.Salary__c</summarizedField>
    <summaryForeignKey>Worker__c.Company__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>