force-app/main/default/objects/Company__c/fields/Total_Number_of_Workers_in_the_company__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Workers_in_the_company__c</fullName>
    <label>Total Number of Workers in the company</label>
    <summaryForeignKey>Worker__c.Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>